tests/testcases/valid/lambdas/11_nested_calls.ciel
// Test: Nested lambda calls
// Expected: Lambda return value used as argument to another lambda
int printf(char* format, ...);

int main() {
    printf("Test: Nested lambda calls\n");
    
    int x;
    x = 5;

    // Lambda 1: Returns a value
    [x = x] get_double() -> int {
        return x + x;
    };

    // Lambda 2: Takes a parameter
    [] square(int n) -> int {
        return n * n;
    };

    // Use result of one lambda as argument to another
    int result = square(get_double());
    printf("Result (square(get_double())): %d\n", result);
    printf("Expected: 100 (get_double returns 10, square(10) = 100)\n");

    return 0;
}
